<resources>
    <string name="app_name">VKInternshipApp</string>
    <string name="root_dir_name">Memory</string>
    <string name="file_name_with_ext">%1$s.%2$s</string>
    <string name="file_size_b">%1$.2f B</string>
    <string name="file_size_kb">%1$.2f KB</string>
    <string name="file_size_mb">%1$.2f MB</string>
    <string name="file_size_gb">%1$.2f GB</string>
    <plurals name="dir_items_count">
        <item quantity="one">%1$d item</item>
        <item quantity="other">%1$d items</item>
    </plurals>
    <string name="msg_empty_folder">Folder is empty</string>
    <string name="msg_permissions_not_granted">You don\'t have permissions!</string>
    <string name="msg_error">Something went wrong!</string>
    <string name="btn_try_again">Try again</string>
    <string name="btn_request_permissions">Request permissions</string>
    <string name="file_icon_cd">File icon</string>
    <string name="more_actions_cd">More actions</string>
    <string name="menu_open_file">Open file</string>
    <string name="menu_share_file">Share file</string>
    <string name="chooser_title_share_file">Share File</string>
    <string name="menu_change_sort_direction">Change sort direction</string>
    <string name="menu_change_sort_type">Sort by</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_type">Type</string>
    <string name="sort_by_size">Size</string>
    <string name="updated_files_title">Recently</string>
</resources>